--- a/TODO
+++ b/TODO
@@ -1,12 +1,13 @@
 VERSAO INTERMEDIA:
-	+ Transicoes entre janelas e menu principal
-	+ Blindar o programa
-	+ Por tudo em modo ansi C89 (nao usar // para comentarios)
-	+ graph_load_points_from_file: verificar se o ficheiro existe
-	+ verificar se foi possivel abrir os ficheiros
-	+ Testar leitura de texto em todo o lado
-	+ Por valores fisicos corretos
-	+ Desenhar cauda da spaceship (chama)
-	+ Criar uma nave copia que enviada para o cockpit, para garantir que os dados definidos na opcao 1 se mantem para sempre!
-	+ Verificar no view_begin() se a janela ainda existe
-	+ O testing do desenho da superficie foi baixo. Voltar a faze-lo
++	+ Transicoes entre janelas e menu principal
++	+ Blindar o programa
++++	+ Por tudo em modo ansi C89 (nao usar // para comentarios)
++++	+ graph_load_points_from_file: verificar se o ficheiro existe
++++	+ verificar se foi possivel abrir os ficheiros
++++	+ Testar leitura de texto em todo o lado
++++	+ Por valores fisicos corretos
++++	+ Desenhar cauda da spaceship (chama)
++++	+ Criar uma nave copia que enviada para o cockpit, para garantir que os dados definidos na opcao 1 se mantem para sempre!
+++	+ Verificar no view_begin() se a janela ainda existe
++++	+ Verificar se a aterragem esta a ocorrer num landing point ou nao
+
