TODO: write meaningful commit message

--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@ VERSAO INTERMEDIA:
 +++	+ Por valores fisicos corretos
 +++	+ Por butoes a desenhar de forma bonita
 +++	+ COrrigir Readme.md para ter o compilador certo
++++	+ Implementar o chrono tambem para a versao C11
 
 VERSAO FINAL
 ++	+ Verificar no view_begin() se a janela ainda existe
