--- a/TODO
+++ b/TODO
@@ -1,8 +1,7 @@
 VERSAO INTERMEDIA:
-+++	+ Por valores fisicos corretos
 +++	+ Por butoes a desenhar de forma bonita
-+++	+ COrrigir Readme.md para ter o compilador certo
-+++	+ Implementar o chrono tambem para a versao C11
++++	+ Corrigir Readme.md para ter o compilador certo
++++	+ Implementar a funcao para esperar em modo ANSI
 
 VERSAO FINAL
 ++	+ Verificar no view_begin() se a janela ainda existe
