Small button update

--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 VERSAO INTERMEDIA:
-+++	+ Por butoes a desenhar de forma bonita
++++	+ Por butoes a mudar a cor com o hover e com o clique
 +++	+ Corrigir Readme.md para ter o compilador certo
 +++	+ Implementar a funcao para esperar em modo ANSI
 
