--- a/TODO
+++ b/TODO
@@ -1,8 +1,7 @@
 + Criar a pseudo funcao de timming
-+ Completar modo grafico
 + Verificar se aresta de alunagem e valida
 + Adicionar pontos por ordem de x :) (i z)
-
++ Scalling da camara
 
 
 [LATER]
