--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-+ Criar a pseudo funcao de timming
++ Testar a pseudo funcao de timming
 + Verificar se aresta de alunagem e valida
 + Adicionar pontos por ordem de x :) (i z)
 + Scalling da camara
